force-app/main/default/objects/Employee_Claim__c/Employee_Claim__c.object-meta.xml
<CustomObject>
    <label>Employee Claim</label>
    <nameField>
        <label>Employee Claim Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Claims</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>