force-app/main/default/objects/Employee_Claim__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <description>The claim related to this employee.</description>
    <inlineHelpText>The claim related to this employee.</inlineHelpText>
    <label>Claim</label>
    <referenceTo>Claim__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employee_Claims1</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>