force-app/main/default/objects/Employee_Claim__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <description>The employee related to this claim.</description>
    <inlineHelpText>The employee related to this claim.</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Employee_Claims1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>