force-app/main/default/objects/Employee_Claim__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Additional information about this Employee Claim.</description>
    <inlineHelpText>Additional information about this Employee Claim.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>