force-app/main/default/objects/Employee_Claim__c/validationRules/Unique_Employee_Claim_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Unique_Employee_Claim_Number</fullName>
    <active>true</active>
    <description>Enforces a unique value for Employee Claim Number.</description>
    <errorConditionFormula>AND(
(VLOOKUP(
$ObjectType.Employee_Claim__c.Fields.Name,
$ObjectType.Employee_Claim__c.Fields.Name,
Name
) = Name),
OR(ISNEW(), ISCHANGED(Name))
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Employee Claim Number must be unique.</errorMessage>
</ValidationRule>